...
      {data?.items.length ? (
        <FlatList
          data={data.items}
          keyExtractor={(item) => item.id}
          contentContainerStyle={styles.list}
          renderItem={({ item }) => (
            <Pressable testID="my-trajet-item" onPress={() => router.push(`/trajets/${item.id}`)}>
              <TrajetCard trajet={item} />
            </Pressable>
          )}
          ListFooterComponent={
            <PaginationBar
              page={page}
...
